fix option hover on mobile

--- a/src/css/special.styl
+++ b/src/css/special.styl
@@ -144,11 +144,13 @@
             padding 0 5px
             border 2px solid #000
             background-color #fff
-            transition background-color .2s
-            
-            &:hover
-                color #fff
-                background-color #000
+
+            @media (hover), (min-width:0\0), (min--moz-device-pixel-ratio:0)
+                transition background-color .2s
+
+                &:hover
+                    color #fff
+                    background-color #000
                 
         &__user-answer
             width 180px
